# HFRS_gamma

./: .gitignore  CMakeLists.txt  HFRS.cc  LICENSE  README.md
analysis/: calculate_angle.cpp
include/: BiasedRDPhysics.hh  Constants.hh  CsIArray.hh  CsIDetector.hh  CsIHit.hh  CsISD.hh  DataStructure.hh  DetectorConstruction.hh  EventAction.hh  GAGGArray.hh  GAGGDetector.hh  GAGGHit.hh  GAGGSD.hh  LaBr3Array.hh  LaBr3Detector.hh  LaBr3Hit.hh  LaBr3SD.hh  NaIArray.hh  NaIDetector.hh  NaIHit.hh  NaISD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh
macros/: Co60.mac  gamma.mac  gui.mac  init_vis.mac  vis.mac
src/: BiasedRDPhysics.cc  CsIArray.cc  CsIDetector.cc  CsIHit.cc  CsISD.cc  DetectorConstruction.cc  EventAction.cc  GAGGArray.cc  GAGGDetector.cc  GAGGHit.cc  GAGGSD.cc  LaBr3Array.cc  LaBr3Detector.cc  LaBr3Hit.cc  LaBr3SD.cc  NaIArray.cc  NaIDetector.cc  NaIHit.cc  NaISD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc
